initial JS -> TS conversion (except most UI code)

--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "homepage": "https://github.com/csm123199/elevatorsaga#readme",
   "devDependencies": {
+    "@types/codemirror": "0.0.74",
+    "@types/jquery": "^3.3.29",
+    "@types/lodash": "^4.14.123",
+    "@types/riot": "^3.6.2",
+    "riot": "^3.13.2",
     "typescript": "^3.4.5"
   }
 }
