--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/csm123199/elevatorsaga#readme",
   "devDependencies": {
     "@types/codemirror": "0.0.74",
+    "@types/jasmine": "^3.3.12",
     "@types/jquery": "^3.3.29",
     "@types/lodash": "^4.14.123",
     "@types/riot": "^3.6.2",
