--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,8 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
-    // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+    //"baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
+    //"paths": { "../libs/riot.es6.js": ["../libs/riot.es6.js"]},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     "rootDirs": [
       //"ts/",
   //"scripts/",
@@ -45,7 +45,7 @@
     ],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": ["./ts"],                       /* List of folders to include type definitions from. */
     "types": [
-      "@types/riot",
+      //"@types/riot",
       "@types/jquery",
       "@types/lodash",
       "@types/codemirror",
