--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "test"
   },
   "scripts": {
+    "serve": "tsc && http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,7 +28,8 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
-    "riot": "^3.13.2",
-    "monaco-editor": "^0.17.0"
+    "http-server": "^0.12.1",
+    "monaco-editor": "^0.17.0",
+    "riot": "^3.13.2"
   }
 }
