--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "test"
   },
   "scripts": {
-    "serve": "tsc && http-server",
+    "serve": "tsc && http-server -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
