--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,8 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    //"baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
-    //"paths": { "../libs/riot.es6.js": ["../libs/riot.es6.js"]},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+    "baseUrl": ".",                       /* Base directory to resolve non-absolute module names. */
+    "paths": { "@riotjs/*": ["node_modules/@riotjs/*/dist/es6.observable.js"]},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     "rootDirs": [
       //"ts/",
   //"scripts/",
@@ -46,8 +46,8 @@
     "typeRoots": ["./ts"],                       /* List of folders to include type definitions from. */
     "types": [
       //"@types/riot",
-      "@types/jquery",
-      "@types/lodash",
+      //"@types/jquery",
+      //"@types/lodash",
       "@types/codemirror",
     ],                           /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
@@ -66,6 +66,6 @@
 
     //"noResolve": false
   },
-  "exclude": ["test/**/*", "libs/**/*", "scripts/*"],
-  "typeAcquisition": { "include": [ "jquery", "lodash", "riot" ] },
+  "exclude": ["test/**/*", "libs/**/*", "scripts/*", "scripts_/*", "dist/*"],
+  "typeAcquisition": { "include": [ "riot" ] },
 }
